--- a/fishing_landing.html
+++ b/fishing_landing.html
@@ -6,6 +6,8 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
+<meta name="keywords" content="fly fishing slams, Utah cutthroat slam, Nevada trout slam, Nevada fly fishing, California Heritage Trout Challenge, California fly fishing, Wyoming trout slam, Wyoming fly fishing, Utah fly fishing, fly fishing challenges, cutthroat trout slam, fly fishing grand slam, trout species challenge, multi-species fly fishing, Utah native trout, fly fishing adventure, fly fishing techniques, exploring new fishing waters, fly fishing achievement, fishing travel, catching all cutthroat trout species">
+<meta name="description" content="Fly fishing slams challenge anglers to catch multiple trout species in different waters. Learn about the Utah, Nevada, California, and Wyoming Cutthroat Slams and how they push fly fishers to explore, adapt, and master new techniques.">
 
 <title>Doctor Dry Fly - Fly Fishing</title>
 <style>
@@ -132,6 +134,11 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <h1 class="title">Fly Fishing</h1>
 </div>
 
+<div>
+  <div class="description">
+    Fly fishing slams challenge anglers to catch multiple trout species in different waters. Learn about the Utah, Nevada, California, and Wyoming Cutthroat Slams and how they push fly fishers to explore, adapt, and master new techniques.
+  </div>
+</div>
 
 
 <div class="quarto-title-meta">
