--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
    
   <ul>
   <li><a href="#fly-fishing-in-the-west" id="toc-fly-fishing-in-the-west" class="nav-link active" data-scroll-target="#fly-fishing-in-the-west">Fly Fishing in the West</a></li>
-  <li><a href="#other-adventures" id="toc-other-adventures" class="nav-link" data-scroll-target="#other-adventures">Other Adventures</a></li>
+  <li><a href="#hiking-drinking-and-other-adventures" id="toc-hiking-drinking-and-other-adventures" class="nav-link" data-scroll-target="#hiking-drinking-and-other-adventures">Hiking, Drinking, and Other Adventures</a></li>
   </ul>
 </nav>
     </div>
@@ -149,9 +149,9 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <h2 class="anchored" data-anchor-id="fly-fishing-in-the-west"><a href="./fishing_landing.html">Fly Fishing in the West</a></h2>
 <p>Information on my completed fish slams, gear, techniques, and other waters I’ve fished.</p>
 </section>
-<section id="other-adventures" class="level2">
-<h2 class="anchored" data-anchor-id="other-adventures"><a href="./adventures_landing.html">Other Adventures</a></h2>
-<p>From time to time I do other things besides fly fishing.</p>
+<section id="hiking-drinking-and-other-adventures" class="level2">
+<h2 class="anchored" data-anchor-id="hiking-drinking-and-other-adventures"><a href="./adventures_landing.html">Hiking, Drinking, and Other Adventures</a></h2>
+<p>From time to time I do other things besides fly fishing. Find information on my hikes and alcohol tasting around the world here.</p>
 <section id="all-content-copyright-of-the-author-2025." class="level5">
 <h5 class="anchored" data-anchor-id="all-content-copyright-of-the-author-2025.">All content copyright of the author, 2025.</h5>
 </section>
