--- a/mccloud_river.html
+++ b/mccloud_river.html
@@ -6,8 +6,9 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
+<meta name="keywords" content="McCloud River fly fishing, McCloud River trout fishing, McCloud River fishing report, McCloud River fishing spots, McCloud River fishing guides, McCloud River rainbow trout, McCloud River brown trout, McCloud River fishing access, best fly fishing McCloud River, McCloud River fishing season, McCloud River fishing regulations, McCloud River camping for anglers, McCloud River fishing tips">
 
-<title>Doctor Dry Fly - Lower McCloud River</title>
+<title>Doctor Dry Fly - Fly Fishing the Lower McCloud River, California</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -129,7 +130,7 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Lower McCloud River</h1>
+<h1 class="title">Fly Fishing the Lower McCloud River, California</h1>
 </div>
 
 
@@ -144,7 +145,7 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 
 </header>
 
-<p>While in the McCloud River area working on my <a href="./california_heritage_slam.html">California Heritage Trout Challenge</a>, I took a day to fish the Lower McCloud below McCloud Resevoir. The river runs through a steep and narrow canyon and access is limited by the geography and private land. I made reservations at the Nature Conservancy-Kerry Landreth Preserve, which offers some of the only publicly-available access along the river in this area. The Preserve is well publicized online and a number of local fly shops offer guided trips on the river. It seems to be as famous a fly fishing water as exists in the state of California and I was excited for my day there. I’ll cut to the chase: I didn’t like it for reasons I’ll detail below. I guess I’m glad I gave it a shot, but it’s not high on the list for a return visit.</p>
+<p>While in the McCloud River area working on my <a href="./california_heritage_slam.html">California Heritage Trout Challenge</a>, I took a day to fish the Lower McCloud below McCloud Resevoir. The river runs through a steep and narrow canyon and access is limited by the geography and private land. I made reservations at the <a href="https://www.nature.org/en-us/get-involved/how-to-help/places-we-protect/mccloud-river-preserve/">Nature Conservancy-Kerry Landreth Preserve</a>, which offers some of the only publicly-available access along the river in this area. The Preserve is well publicized online and a number of local fly shops offer guided trips on the river. It seems to be as famous a fly fishing water as exists in the state of California and I was excited for my day there. I’ll cut to the chase: I didn’t like it for reasons I’ll detail below. I guess I’m glad I gave it a shot, but it’s not high on the list for a return visit.</p>
 <section id="logistics" class="level3">
 <h3 class="anchored" data-anchor-id="logistics">Logistics</h3>
 <p>Fishing the Nature Conservancy property requires a permit/tag, which can be reserved online or one can take their chances by walking up. There are ten total tags, half available via reservation and half available to walk-up anglers. The good news is the reservation is free so there is no real cost of making one then not showing up, other than taking up a spot for another angler. I was surprised that I was able to make a reservation about a week before my visit, and when I arrived, only two reservation tags were used, and none of the walk-up tags were taken. It was in the middle of the week, but this was mid-July, seemingly prime fishing season. Though there are only ten tags, there are cabins on the Nature Conservancy property and people staying in those cabins apparently do not have to reserve tags. While only two tags were taken on my visit, there were at least five people fishing the river. It wasn’t a big deal in terms of crowds as the property has between two and three miles of river, but I could imagine a full complement of ten anglers plus another ten or so from the cabins (I’m not sure how many people can stay in them) making for a somewhat crowded day.</p>
