--- a/tequila.html
+++ b/tequila.html
@@ -119,7 +119,7 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#uncover-the-secrets-of-tequila-tasting-in-tequila-jalisco" id="toc-uncover-the-secrets-of-tequila-tasting-in-tequila-jalisco" class="nav-link active" data-scroll-target="#uncover-the-secrets-of-tequila-tasting-in-tequila-jalisco">Uncover the Secrets of Tequila: Tasting in Tequila, Jalisco”</a>
+  <li><a href="#uncover-the-secrets-of-tequila-tasting-in-tequila-jalisco" id="toc-uncover-the-secrets-of-tequila-tasting-in-tequila-jalisco" class="nav-link active" data-scroll-target="#uncover-the-secrets-of-tequila-tasting-in-tequila-jalisco">Uncover the Secrets of Tequila: Tasting in Tequila, Jalisco</a>
   <ul class="collapse">
   <li><a href="#travel-to-guadalajara" id="toc-travel-to-guadalajara" class="nav-link" data-scroll-target="#travel-to-guadalajara">Travel to Guadalajara</a></li>
   <li><a href="#from-guadalajara-to-tequila" id="toc-from-guadalajara-to-tequila" class="nav-link" data-scroll-target="#from-guadalajara-to-tequila">From Guadalajara to Tequila</a></li>
@@ -153,7 +153,7 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 </header>
 
 <section id="uncover-the-secrets-of-tequila-tasting-in-tequila-jalisco" class="level2">
-<h2 class="anchored" data-anchor-id="uncover-the-secrets-of-tequila-tasting-in-tequila-jalisco">Uncover the Secrets of Tequila: Tasting in Tequila, Jalisco”</h2>
+<h2 class="anchored" data-anchor-id="uncover-the-secrets-of-tequila-tasting-in-tequila-jalisco">Uncover the Secrets of Tequila: Tasting in Tequila, Jalisco</h2>
 <p>In early 2023, I went with my family to Tequila, Mexico for tequila tasting and sightseeing. I did a lot of research prior to going, mostly on Reddit and other individual blogs, and found they were of some help. I want to detail my experience so others can plan their trip. I can summarize my overall impression by saying, if you’re thinking about doing this, you should; it’s a great trip.</p>
 <section id="travel-to-guadalajara" class="level3">
 <h3 class="anchored" data-anchor-id="travel-to-guadalajara">Travel to Guadalajara</h3>
